<?xml version="1.0" encoding="utf-8"?>

<resources>
    <!-- Title for the application. [CHAR LIMIT=12] -->
    <string name="app_name">Quick Quakes</string>
    <string name="details">Earthquake Details</string>
    <string name="linkButton">See More</string>
    <string name="historicData">Historic Earthquakes</string>

    <!-- Default text to show with the earthquake location ("Near the Pacific-Antarctic Ridge")
         if no specific kilometer distance from the primary location is given [CHAR LIMIT=30] -->
    <string name="near_the">Near the</string>

    <!-- Text to display in the list when there are no earthquakes [CHAR LIMIT=NONE] -->
    <string name="no_earthquakes">No earthquakes found.</string>

    <!-- Error message when there is no internet connectivity [CHAR LIMIT=NONE] -->
    <string name="no_internet_connection">No internet connection.</string>

    <!-- Settings Menu Item [CHAR LIMIT=NONE] -->
    <string name="settings_menu_item">Settings</string>
    <!-- Settings Activity Title [CHAR LIMIT=NONE] -->
    <string name="settings_title">Earthquake Settings</string>

    <!-- Strings For Minimum Magnitude Preference [CHAR LIMIT=30] -->
    <string name="settings_min_magnitude_label">Minimum Magnitude</string>
    <string name="settings_min_magnitude_key" translatable="false">min_magnitude</string>
    <string name="settings_min_magnitude_default" translatable="false">1</string>

    <!-- Strings For Order-By Preference [CHAR LIMIT=30] -->
    <string name="settings_order_by_label">Order By</string>
    <string name="settings_order_by_key" translatable="false">order_by</string>
    <string name="settings_order_by_default" translatable="false">@string/settings_order_by_magnitude_value</string>

    <!-- Label for order-by magnitude option [CHAR LIMIT=20] -->
    <string name="settings_order_by_magnitude_label">Magnitude</string>
    <string name="settings_order_by_magnitude_value" translatable="false">magnitude</string>

    <!-- Label for order-by most recent option [CHAR LIMIT=20] -->
    <string name="settings_order_by_most_recent_label">Most Recent</string>
    <string name="settings_order_by_most_recent_value" translatable="false">time</string>

    <!-- Labels for EarthquakeDetailActivity Display -->
    <string name="magnitude_key" translatable="false">magnitude</string>
    <string name="magnitude_default" translatable="false">0.0</string>

    <string name="location_key" translatable="false">location</string>
    <string name="location_default" translatable="false">location</string>

    <string name="date_key" translatable="false">date</string>
    <string name="date_default" translatable="false">date</string>

    <string name="time_key" translatable="false">time</string>
    <string name="time_default" translatable="false">00:00</string>

    <string name="url_key" translatable="false">link</string>
    <string name="url_default" translatable="false">usgs.gov</string>

    <!-- Magnitude Scale -->
    <string name="source">Source: USGS</string>
    <string name="one">1.0–1.9: Microearthquake, not felt, or felt rarely.</string>
    <string name="two">2.0–2.9: Felt slightly by some people. No damage to buildings.	</string>
    <string name="three">3.0–3.9: Often felt by people, but very rarely causes damage. Shaking of indoor objects can be noticeable.	</string>
    <string name="four">4.0–4.9: Noticeable shaking of indoor objects and rattling noises. Felt by most people in the affected area. Slightly felt outside. Generally causes zero to minimal damage. Moderate to significant damage very unlikely. Some objects may fall off shelves or be knocked over.</string>
    <string name="five">5.0–5.9: Can cause damage of varying severity to poorly constructed buildings. Zero to slight damage to all other buildings. Felt by everyone.</string>
    <string name="six">6.0–6.9: Damage to a moderate number of well-built structures in populated areas. Earthquake-resistant structures survive with slight to moderate damage. Poorly designed structures receive moderate to severe damage. Felt in wider areas; up to hundreds of miles/kilometers from the epicenter. Strong to violent shaking in epicentral area.</string>
    <string name="seven">7.0–7.9: Causes damage to most buildings, some to partially or completely collapse or receive severe damage. Well-designed structures are likely to receive damage. Felt across great distances with major damage mostly limited to 250 km from epicenter.</string>
    <string name="eight">8.0–8.9: Major damage to buildings, structures likely to be destroyed. Will cause moderate to heavy damage to sturdy or earthquake-resistant buildings. Damaging in large areas. Felt in extremely large regions.</string>
    <string name="nine">9.0+: At or near total destruction – severe damage or collapse to all buildings. Heavy damage and shaking extends to distant locations. Permanent changes in ground topography.</string>
    <string name="defScale">Default</string>

    <!-- Historic Earthquake locations -->
    <string name="valdivia">City of Valdivia, Chile</string>
    <string name="pwsAlaska">Prince William Sound, Alaska</string>
    <string name="indonesia">West Coast of Northern Sumatra, Indonesia</string>
    <string name="ecuadorColumbia">City of Esmeraldas, Ecuador</string>
    <string name="kurilIsland">Kuril Islands</string>
    <string name="sanFrancisco">City of San Franscisco, CA</string>
    <string name="sichuan">50 mi West-Northwest of Chengdu, Sichuan</string>
    <string name="tohoku2011">"43 mi east of the Oshika Peninsula of Tōhoku, Japan "</string>
    <string name="hanshin">City of Kobe, Japan</string>

</resources>
